[package]
name = "neur"
version = "0.1.0"
edition = "2024"
description = "A minimal static site generator."
readme = "README.md"
repository = "https://github.com/aryaveersr/neur"
license = "GPL-3.0"
keywords = ["jamstack", "ssg", "static site generator"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comrak = "0.47"
lightningcss = { version = "1.0.0-alpha.68", features = ["browserslist"] }
markdown-frontmatter = { version = "0.4", default-features = false, features = [
  "yaml"
] }
minify-html = "0.18"
serde = { version = "1.0", features = ["derive"] }
tera = "1.20"
toml = "0.9"
